# DesktopFolderLauncherQt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
packaging/: DeskFolder.iss
qml/: AppIcon.qml  FluentIcon.qml  FolderSettingsWindow.qml  FolderSpawner.qml  FolderWindow.qml  Main.qml  SettingsWindow.qml
resources/: app.rc
src/: AppController.cpp  AppController.h  AppItem.cpp  AppItem.h  DropHandler.cpp  DropHandler.h  FileManager.cpp  FileManager.h  FolderData.cpp  FolderData.h  FolderManager.cpp  FolderManager.h  IconProvider.cpp  IconProvider.h  SettingsManager.cpp  SettingsManager.h  WindowEffects.cpp  WindowEffects.h
tests/: model_tests.cpp
